--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <h1>Alisa Bevers</h1>
         </div>
-        <div id="navBar">
+        <div>
             <ul>
                 <li>
                     <a>About Me</a>
@@ -30,9 +30,9 @@
             </ul>
         </div>
     </header>
-    <div class="atlanta">
-        <h2>Welcome to my page!</h2>
-    </div>
+    <section class="atlanta">
+        <h2 id="welcome">Welcome to my page!</h2>
+    </section>
     <div class="content">
         <h2>About Me</h2>
         <p>
